--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BH8RSFY3HM"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-BH8RSFY3HM');
+		</script>
+		
+		
 		<style>
 			* {
 				box-sizing: border-box;
