change background color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 	<body style="display: grid; grid-template-rows: auto 1fr; height: 100vh; margin: 0;">
-		<div style="display: grid; grid-template-columns: 1fr auto; grid-gap: 10px; padding: 10px; background: green;">
+		<div style="display: grid; grid-template-columns: 1fr auto; grid-gap: 10px; padding: 10px; background: blue;">
 			<input class="js-input-url" placeholder="enter iframe url">
 			<button type="button" class="js-btn-load" style="min-width: 200px; background: yellow;">Go!</button>
 		</div>
